# OOP3

./: .gitignore  README.md
.devcontainer/: devcontainer.json
Laba_3/: CMakeLists.txt  main.cpp
Laba_3/include/: Figure.h  FigureArray.h  Points.h  Rectangle.h  Rhombus.h  Trapezoid.h
Laba_3/src/: FigureArray.cpp  Points.cpp  Rectangle.cpp  Rhombus.cpp  Trapezoid.cpp
Laba_3/tests/: test_figure_array.cpp  test_points.cpp  test_rectangle.cpp  test_rhombus.cpp  test_trapezoid.cpp
